[gd_scene load_steps=10 format=3 uid="uid://bayoiv4rdhxdn"]

[ext_resource type="Script" path="res://Card.gd" id="1_vgp40"]
[ext_resource type="Texture2D" uid="uid://b70678vujcful" path="res://assets/images/card.png" id="2_i5i30"]
[ext_resource type="Script" path="res://IntField.gd" id="3_5aebm"]
[ext_resource type="Texture2D" uid="uid://coatl41nkmgbt" path="res://assets/images/coin.png" id="3_jd5u4"]
[ext_resource type="Texture2D" uid="uid://bqot3i02lma5a" path="res://assets/images/broken.png" id="4_bqihi"]
[ext_resource type="Texture2D" uid="uid://bqm54tgdosa5p" path="res://assets/monsters/arms/steampunkarmsmall.png" id="5_p25cg"]
[ext_resource type="Script" path="res://CardPhysics.gd" id="6_etfvj"]
[ext_resource type="Texture2D" uid="uid://c3icdbw1xe6fe" path="res://assets/images/fist.png" id="6_nyqsk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfm2l"]
size = Vector2(444, 410)

[node name="Card" type="Node2D" node_paths=PackedStringArray("cost", "durability", "damage", "title", "description")]
script = ExtResource("1_vgp40")
cost = NodePath("Cost")
durability = NodePath("Durability")
damage = NodePath("Damage")
title = NodePath("TitleBackground/Title")
description = NodePath("DescriptionBackground/Description")

[node name="CardBorder" type="Sprite2D" parent="."]
texture = ExtResource("2_i5i30")

[node name="PictureBackground" type="ColorRect" parent="."]
offset_left = -162.0
offset_top = -112.0
offset_right = 162.0
offset_bottom = 114.0
color = Color(0.941176, 0.933333, 0.905882, 1)

[node name="DescriptionDivider" type="ColorRect" parent="."]
offset_left = -162.0
offset_right = 162.0
offset_bottom = 3.0
color = Color(0.211765, 0.164706, 0.0352941, 1)

[node name="Cost" type="Node2D" parent="."]
script = ExtResource("3_5aebm")
startingValue = 2

[node name="Cost Background" type="Sprite2D" parent="Cost"]
position = Vector2(-191, -189)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_jd5u4")

[node name="Title" type="Label" parent="Cost"]
offset_left = -217.0
offset_top = -206.0
offset_right = -165.0
offset_bottom = -172.0
theme_override_colors/font_color = Color(0.0823529, 0.0666667, 0.0117647, 1)
theme_override_font_sizes/font_size = 24
text = "88"
horizontal_alignment = 1

[node name="Durability" type="Node2D" parent="." node_paths=PackedStringArray("label")]
script = ExtResource("3_5aebm")
label = NodePath("DurabilityBackground2/Durability")
startingValue = 3

[node name="DurabilityBackground" type="Sprite2D" parent="Durability"]
position = Vector2(191, -183)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_bqihi")

[node name="DurabilityBackground2" type="ColorRect" parent="Durability"]
offset_left = 169.0
offset_top = -195.0
offset_right = 206.0
offset_bottom = -171.0
color = Color(0.65098, 0.596078, 0.439216, 0.588235)

[node name="Durability" type="Label" parent="Durability/DurabilityBackground2"]
layout_mode = 0
offset_left = -5.0
offset_top = -5.0
offset_right = 44.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(0.0823529, 0.0666667, 0.0117647, 1)
theme_override_font_sizes/font_size = 24
text = "77"
horizontal_alignment = 1

[node name="Damage" type="Node2D" parent="."]
position = Vector2(176, 157)
script = ExtResource("3_5aebm")
startingValue = 2

[node name="DamageSprite" type="Sprite2D" parent="Damage"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_nyqsk")

[node name="DamageLabel" type="Label" parent="Damage"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -17.0
offset_right = 26.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0823529, 0.0666667, 0.0117647, 1)
theme_override_font_sizes/font_size = 24
text = "88"
horizontal_alignment = 1

[node name="DescriptionBackground" type="ColorRect" parent="."]
offset_left = -162.0
offset_top = 3.0
offset_right = 162.0
offset_bottom = 114.0
color = Color(0.827451, 0.8, 0.721569, 1)

[node name="Description" type="Label" parent="DescriptionBackground"]
layout_mode = 0
offset_right = 324.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0.0823529, 0.0666667, 0.0117647, 1)
theme_override_font_sizes/font_size = 16
text = "Sample Body Text. This is a really long sample body text so I can see the text wrap correctly. I like watching text wrap it is my favorite activity"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CardPicture" type="Sprite2D" parent="."]
position = Vector2(-16, -75)
rotation = 0.785398
texture = ExtResource("5_p25cg")

[node name="TitleBackground" type="ColorRect" parent="."]
offset_left = -174.0
offset_top = -169.0
offset_right = 165.0
offset_bottom = -145.0
color = Color(0.65098, 0.596078, 0.439216, 0.588235)

[node name="Title" type="Label" parent="TitleBackground"]
layout_mode = 0
offset_left = -17.0
offset_top = -7.0
offset_right = 364.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0.0823529, 0.0666667, 0.0117647, 1)
theme_override_font_sizes/font_size = 24
text = "Really Long Name Claw Arm"
horizontal_alignment = 1

[node name="TypeBackground" type="ColorRect" parent="."]
offset_left = -81.0
offset_top = 144.0
offset_right = 80.0
offset_bottom = 168.0
color = Color(0.65098, 0.596078, 0.439216, 0.588235)

[node name="Type" type="Label" parent="TypeBackground"]
layout_mode = 0
offset_left = -25.0
offset_top = -5.0
offset_right = 188.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(0.0823529, 0.0666667, 0.0117647, 1)
theme_override_font_sizes/font_size = 20
text = "Type - Arm"
horizontal_alignment = 1

[node name="CardPhysics" type="Area2D" parent="." node_paths=PackedStringArray("card")]
script = ExtResource("6_etfvj")
card = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardPhysics"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_dfm2l")

[node name="Button" type="Button" parent="CardPhysics"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -201.0
offset_right = 222.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="body_entered" from="CardPhysics" to="CardPhysics" method="_on_card_body_entered"]
[connection signal="body_exited" from="CardPhysics" to="CardPhysics" method="_on_card_body_exited"]
[connection signal="button_down" from="CardPhysics/Button" to="CardPhysics" method="_on_mouse_down"]
[connection signal="button_up" from="CardPhysics/Button" to="CardPhysics" method="_on_mouse_up"]
[connection signal="mouse_entered" from="CardPhysics/Button" to="CardPhysics" method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="CardPhysics/Button" to="CardPhysics" method="_on_card_mouse_exited"]
